--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
-<app-binomial-coef></app-binomial-coef>
-<app-binomial-law></app-binomial-law>
-<app-binomial-distrib></app-binomial-distrib>
+  <div id="wrapper" class="toggled">
+
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Navigation
+                    </a>
+                </li>
+                <li *ngFor="let m of menus" 
+                    [ngClass]="{'selected': selectedMenu === m}"
+                    >
+                    <a href="#" 
+                       (click)="select(m)"
+                       >{{m}}
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div id="page-content-wrapper" *ngIf="selectedMenu == 'Loi binomial'">
+            <div class="container-fluid">
+              <app-binomial-coef></app-binomial-coef>
+              <app-binomial-law></app-binomial-law>
+              <app-binomial-distrib></app-binomial-distrib>
+            </div>
+        </div>
+        <div id="page-content-wrapper" *ngIf="selectedMenu == 'Covariance'">
+            <div class="container-fluid">
+              <app-matrix-stddev></app-matrix-stddev>
+              <app-matrix-covariance></app-matrix-covariance>
+              <app-matrix-correlation></app-matrix-correlation>
+            </div>
+        </div>
+
+    </div>
