--- a/src/app/matrix-stddev/matrix-stddev.component.html
+++ b/src/app/matrix-stddev/matrix-stddev.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    Calcul de la déviation standard
+    Calcul de la déviation
     </div>
   <p class="badge">
     Evaluer la dispersion des mesures autour de la valeur moyenne
