--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,5 +32,10 @@
               <app-matrix-correlation></app-matrix-correlation>
             </div>
         </div>
+        <div id="page-content-wrapper" *ngIf="selectedMenu == 'VaR'">
+            <div class="container-fluid">
+              <app-var-hist></app-var-hist>
+            </div>
+        </div>
 
     </div>
