--- a/src/app/var-cov/var-cov.component.html
+++ b/src/app/var-cov/var-cov.component.html
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    VaR historique
+    VaR Covariance-Variance
     </div>
   <p class="badge">
-    Exemple : calcul de la VaR historique sur le cours du bitcoin
+    Exemple : calcul de la VaR avec la méthode Covariance-Variance sur le bitcoin et l'Ethereum
   </p>
   <div class="panel-body">
     <table class="table">
@@ -18,9 +18,9 @@
     </table>
     <br />
     <hr />
-    <a href="https://www.coindesk.com/">
-      <div class="btn btn-info">
-        Powered by CoinDesk
+    <a href="https://www.alphavantage.co">
+      <div class="btn btn-success">
+        Powered by Alphavantage
       </div>
     </a>
     <br /> <br />
