--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
         <div id="page-content-wrapper" *ngIf="selectedMenu == 'VaR'">
             <div class="container-fluid">
               <app-var-hist></app-var-hist>
-              <app-var-cov></app-var-cov>
+              <app-var-hist-two></app-var-hist-two>
             </div>
         </div>
 
