fix VaR examples

--- a/src/app/shared/matrix-table/matrix-table.component.css
+++ b/src/app/shared/matrix-table/matrix-table.component.css
@@ -33,3 +33,7 @@ thead, tbody tr {
 thead {
     width: calc( 100% - 1em )/* scrollbar is average 1em/16px width, remove it from thead width */
 }
+
+.line-number {
+  color: #aaa;
+}
