--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
 
-        <div id="page-content-wrapper" *ngIf="selectedMenu == 'Loi binomial'">
+        <div id="page-content-wrapper" *ngIf="selectedMenu == 'Loi binomiale'">
             <div class="container-fluid">
               <app-binomial-coef></app-binomial-coef>
               <app-binomial-law></app-binomial-law>
