--- a/src/app/binomial-coef/binomial-coef.component.html
+++ b/src/app/binomial-coef/binomial-coef.component.html
@@ -3,7 +3,7 @@
     Calcul du coefficient binomial
     </div>
   <p class="badge">
-    nombre de combinaison possible
+    Nombre de combinaisons possibles
   </p>
   <div class="panel-body">
     <table class="table">
