--- a/src/app/binomial-distrib/binomial-distrib.component.html
+++ b/src/app/binomial-distrib/binomial-distrib.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    Distribution de la loi binomial
+    Distribution de la loi binomiale
     </div>
   <p class="badge">
     Distributions d'essais indépendants pour une même probabilité de succès
