--- a/src/app/binomial-law/binomial-law.component.html
+++ b/src/app/binomial-law/binomial-law.component.html
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    Calcul de la loi binomial
+    Calcul de la loi binomiale
     </div>
   <p class="badge">
-    nombre de succès obtenus lors de la répétition indépendante de plusieurs expériences aléatoires identiques
+    Nombre de succès obtenus lors de la répétition indépendante de plusieurs expériences aléatoires identiques
   </p>
   <div class="panel-body">
     <table class="table">
@@ -25,6 +25,6 @@
     <br />
     <hr />
     <br />
-    Probalité de {{K === undefined ? 'K' : K}} succès pour {{N === undefined ? 'N' : N}} essais pour une probalité de succès de {{P === undefined ? 'P' : P}} : {{result === undefined ? 'X' : result}}
+    Probabilité de {{K === undefined ? 'K' : K}} succès pour {{N === undefined ? 'N' : N}} essais pour une probabilité de succès de {{P === undefined ? 'P' : P}} : {{result === undefined ? 'X' : result}}
   </div>
 </div>
